# trainingManager

./: CMakeLists.txt  README.md  exercise.cpp  exercise.h  exercise_stat.cpp  exercise_stat.h  main.cpp  stats_control.cpp  stats_control.h  stats_view.cpp  stats_view.h  training_exception.h  training_utility.cpp  training_utility.h
control/: exercise_program_control.cpp  exercise_program_control.h  stats_control.cpp  stats_control.h
utility/: exercise_stat.cpp  exercise_stat.h  training_exception.cpp  training_utility.cpp  training_utility.h
view/: exercise_program_view.cpp  exercise_program_view.h  stats_view.cpp  stats_view.h
